--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template5-10</title>
+    <title>&lt;model-viewer&gt; template6</title>
     <meta charset="utf-8">
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,7 @@ button {
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer id="tobira" src="test_hako_002.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
+    <model-viewer id="tobira" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
   <div class="controls">
     <div><p>扉カラー: <select id="variant"></select></div><p>箱カラー: <select id="variant2"></select></div>
   </div>
