--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template6</title>
+    <title>&lt;model-viewer&gt; template6-2</title>
     <meta charset="utf-8">
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,7 +57,8 @@ modelViewerVariants.addEventListener('load', () => {
   // Adds a default option.
 
 });
-
+</script>
+<script>
 select.addEventListener('input', (event) => {
   modelViewerVariants.variantName = event.target.value === 'default' ? null : event.target.value;
 });
