--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ button {
     <!-- <model-viewer> HTML element -->
     <model-viewer id="tobira" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
   <div class="controls">
-    <div><p>扉カラー: <select id="variant"></select></div><p>箱カラー: <select id="variant2"></select></div>
+    <div><p>扉カラー: <select id="variant"></select></div>
   </div>
       <button slot="ar-button" id="ar-button" align="right">
           3D-AR表示
@@ -41,7 +41,12 @@ button {
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
-	</model-viewer>  
+	</model-viewer> 
+	  <br>
+	      <model-viewer id="hako" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a hako">
+  <div class="controls">
+    <div><p>　　　　　　　箱カラー: <select id="variant"></select></div>
+	</model-viewer> 
 <script>
 const modelViewerVariants = document.querySelector("model-viewer#tobira");
 const select = document.querySelector('#variant');
