--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ select.addEventListener('input', (event) => {
 });
 
 const modelViewerVariants = document.querySelector("model-viewer#hako");
-const select = document.querySelector('#variant2');
+const select = document.querySelector('#variant');
 
 modelViewerVariants.addEventListener('load', () => {
   const names = modelViewerVariants.availableVariants;
