--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template6-3</title>
+    <title>&lt;model-viewer&gt; template6-4</title>
     <meta charset="utf-8">
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@ button {
     <!-- <model-viewer> HTML element -->
     <model-viewer id="tobira" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
   <div class="controls">
-    <div><p>扉カラー: <select id="variant"></select></div>
+    <div><p>扉カラー: <select id="variant"></select><p>箱カラー: <select id="variant2"></select></div>
   </div>
       <button slot="ar-button" id="ar-button" align="right">
           3D-AR表示
@@ -43,10 +43,6 @@ button {
       </div>
 	</model-viewer> 
 	  <br>
-	      <model-viewer id="hako" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a hako">
-  <div class="controls">
-    <div><p>　　　　　　　箱カラー: <select id="variant2"></select></div>
-	</model-viewer> 
 <script>
 const modelViewerVariants = document.querySelector("model-viewer#tobira");
 const select = document.querySelector('#variant');
