--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ button {
     <!-- <model-viewer> HTML element -->
     <model-viewer id="tobira" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
   <div class="controls">
-    <div><p>扉カラー: <select id="variant"></select><p>箱カラー: <select id="variant2"></select></div>
+    <div><p>カラー: <select id="variant"></select>
   </div>
       <button slot="ar-button" id="ar-button" align="right">
           3D-AR表示
