--- a/index.html
+++ b/index.html
@@ -1,88 +1,27 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template6-5</title>
+    <title>test_page2</title>
     <meta charset="utf-8">
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
     <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-  <style>
-.controls {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  bottom: 8px;
-  left: 8px;
-}
-
-#texture-name,
-#image-name {
-  font-size: 0.8em;
-}
-
-button {
-  font-size: 1.3em;
-  margin: 0 0.25em;
-}
-  </style>
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer id="tobira" src="test_hako_003.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" ar alt="A 3D model of a tobira">
-  <div class="controls">
-    <div>カラー変更: <select id="variant"></select></div>
-  </div>
-      <button slot="ar-button" id="ar-button" align="right">
-3D-AR表示
+    <model-viewer src="test_FBX_blender_01.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button">
+          View in your space
       </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
-	</model-viewer> 
-	  <br>
-<script>
-const modelViewerVariants = document.querySelector("model-viewer#tobira");
-const select = document.querySelector('#variant');
-
-modelViewerVariants.addEventListener('load', () => {
-  const names = modelViewerVariants.availableVariants;
-  for (const name of names) {
-    const option = document.createElement('option');
-    option.value = name;
-    option.textContent = name;
-    select.appendChild(option);
-  }
-  // Adds a default option.
-
-});
-
-select.addEventListener('input', (event) => {
-  modelViewerVariants.variantName = event.target.value === 'default' ? null : event.target.value;
-});
-</script> 
-<script>
-const modelViewerVariants = document.querySelector("model-viewer#hako");
-const select = document.querySelector('#variant2');
-
-modelViewerVariants.addEventListener('load', () => {
-  const names = modelViewerVariants.availableVariants;
-  for (const name of names) {
-    const option = document.createElement('option');
-    option.value = name;
-    option.textContent = name;
-    select.appendChild(option);
-  }
-  // Adds a default option.
-
-});
-
-select.addEventListener('input', (event) => {
-  modelViewerVariants.variantName = event.target.value === 'default' ? null : event.target.value;
-});
-</script>  
+    </model-viewer>  
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
